--- a/src/components/layout/Spinner.module.css
+++ b/src/components/layout/Spinner.module.css
@@ -15,7 +15,7 @@
   width: 64px;
   height: 64px;
   border: 8px solid;
-  border-color: #00cc66 transparent #00cc66 transparent;
+  border-color: #9c00cc transparent #9c00cc transparent;
   border-radius: 50%;
   animation: spin 1.2s linear infinite;
 }
