--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,7 @@
 @plugin "daisyui" {
   themes: light --default, dark --prefersdark, acid;
 }
+.custom-card-image .card.image-full:before {
+  border-radius: 0.5rem;
+  opacity: 0.3;
+}
